--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "build:ui": "rm -rf build && cd ../fullstackopen/part2/phonebook/ && npm run build --prod && cp -r build/ ../../../fullstackopen-backend",
+        "deploy:full" : "npm run build:ui && git add . && git commit -m uibuild && git push heroku main"
     },
     "author": "Jaswant Rathod",
     "license": "MIT",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "mongoose": "^5.11.2",
+        "mongoose-unique-validator": "^2.0.3",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
