--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "node index.js",
         "dev": "nodemon index.js",
         "build:ui": "rm -rf build && cd ../fullstackopen/part2/phonebook/ && npm run build --prod && cp -r build/ ../../../fullstackopen-backend",
-        "deploy:full" : "npm run build:ui && git add . && git commit -m uibuild && git push heroku main"
+        "deploy:full" : "npm run build:ui && git add . && git commit -m uibuild && git push heroku master"
     },
     "author": "Jaswant Rathod",
     "license": "MIT",
