--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "node index.js",
         "dev": "nodemon index.js",
         "build:ui": "rm -rf build && cd ../fullstackopen/part2/phonebook/ && npm run build --prod && cp -r build/ ../../../fullstackopen-backend",
-        "deploy:full" : "npm run build:ui && git add . && git commit -m uibuild && git push heroku master"
+        "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push heroku master"
     },
     "author": "Jaswant Rathod",
     "license": "MIT",
@@ -21,6 +21,12 @@
         "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "eslint": "^7.15.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "nodemon": "^2.0.6"
     }
 }
